@@ -1,3 +1,5 @@
+- bootloader config:
+  o log grub2-install failures (mga#15439)
 - partitionning:
   o log fdisk -l output before/after partitionning
   o really try to detect recovery partitions on GPT
