@@ -1,3 +1,5 @@
+- drakboot:
+  o log grub2-install failures (mga#15439)
 - diskdrake:
   o really try to detect recovery partitions on GPT
 
